Updated try catch and changed line 22 a bit in ApplicationDB.java